# barnes-hut

./: .clang-format  CMakeLists.txt  merge-jsons-instructions.md
apps/: CMakeLists.txt  app.cpp
include/barnes_hut/: body.h  force.h  node.h  simulation.h
launchers/bh16/bh16-10000000b-1000s/: bh16-10000000b-1000s.sh
launchers/bh16/bh16-10000000b-2s/: bh16-10000000b-2s.sh
launchers/bh16/bh16-1000000b-1000s/: bh16-1000000b-1000s.sh
launchers/bh16/bh16-1000000b-2s/: bh16-1000000b-2s.sh
launchers/bh16/bh16-100000b-1000s/: bh16-100000b-1000s.sh
launchers/bh16/bh16-100000b-2s/: bh16-100000b-2s.sh
launchers/bh16/bh16-10000b-1000s/: bh16-10000b-1000s.sh
launchers/bh16/bh16-10000b-2s/: bh16-10000b-2s.sh
launchers/bh16/bh16-1000b-1000s/: bh16-1000b-1000s.sh
launchers/bh16/bh16-1000b-2s/: bh16-1000b-2s.sh
launchers/bh256/bh256-10000000b-1000s/: bh256-10000000b-1000s.sh
launchers/bh256/bh256-10000000b-2s/: bh256-10000000b-2s.sh
launchers/bh256/bh256-1000000b-1000s/: bh256-1000000b-1000s.sh
launchers/bh256/bh256-1000000b-2s/: bh256-1000000b-2s.sh
launchers/bh256/bh256-100000b-1000s/: bh256-100000b-1000s.sh
launchers/bh256/bh256-100000b-2s/: bh256-100000b-2s.sh
launchers/bh256/bh256-10000b-1000s/: bh256-10000b-1000s.sh
launchers/bh256/bh256-10000b-2s/: bh256-10000b-2s.sh
launchers/bh256/bh256-1000b-1000s/: bh256-1000b-1000s.sh
launchers/bh256/bh256-1000b-2s/: bh256-1000b-2s.sh
launchers/bh4/bh4-10000000b-1000s/: bh4-10000000b-1000s.sh
launchers/bh4/bh4-10000000b-2s/: bh4-10000000b-2s.sh
launchers/bh4/bh4-1000000b-1000s/: bh4-1000000b-1000s.sh
launchers/bh4/bh4-1000000b-2s/: bh4-1000000b-2s.sh
launchers/bh4/bh4-100000b-1000s/: bh4-100000b-1000s.sh
launchers/bh4/bh4-100000b-2s/: bh4-100000b-2s.sh
launchers/bh4/bh4-10000b-1000s/: bh4-10000b-1000s.sh
launchers/bh4/bh4-10000b-2s/: bh4-10000b-2s.sh
launchers/bh4/bh4-1000b-1000s/: bh4-1000b-1000s.sh
launchers/bh4/bh4-1000b-2s/: bh4-1000b-2s.sh
launchers/bh64/bh64-10000000b-1000s/: bh64-10000000b-1000s.sh
scripts/: generate_benchmark_scenario.py  generate_scenario.py  reference_system.md
simulators/: CMakeLists.txt
simulators/barnes-hut-simulator/: CMakeLists.txt  barnes_hut_simulator_app.cpp
simulators/barnes-hut-simulator/src/: CMakeLists.txt  barnes_hut_simulator.cpp  barnes_hut_simulator.h
simulators/exact-simulator/: CMakeLists.txt  exact_simulator_app.cpp
simulators/exact-simulator/src/: CMakeLists.txt  exact_simulator.cpp  exact_simulator.h
simulators/interfaces/: CMakeLists.txt  barnes_hut.cpp  barnes_hut.h  communication.cpp  communication.h  physics.cpp  physics.h  steppable.h
simulators/mpi-barnes-hut-simulator/: CMakeLists.txt  mpi_barnes_hut_simulator_app.cpp
simulators/mpi-barnes-hut-simulator/src/: CMakeLists.txt  mpi_barnes_hut_simulator.cpp  mpi_barnes_hut_simulator.h
simulators/utils/: CMakeLists.txt  loader.cpp  loader.h  persistence.h  power_of_four.h  step_format.h
src/: CMakeLists.txt  body.cpp  eigen_json.h  force.cpp  node.cpp  node_json.cpp  simple_simulator.cpp  simulation.cpp  simulation_json.cpp
src/barnes_hut/: CMakeLists.txt  body.cpp  body.h  body_json.cpp  body_update.cpp  body_update.h  bounding_box.cpp  bounding_box.h  force.cpp  force.h  node.cpp  node.h  node_json.cpp  quadtree.cpp  quadtree.h  templates.h
src/body/: CMakeLists.txt  body.cpp  body.h  body_json.cpp  bounding_box.cpp  bounding_box.h
src/data_transfer/: CMakeLists.txt  body_deserialization.cpp  body_deserialization.h  body_serialization.cpp  body_serialization.h  mpi_datatypes.cpp  mpi_datatypes.h  quadtree_deserialization.cpp  quadtree_deserialization.h  quadtree_serialization.cpp  quadtree_serialization.h
src/gather/: CMakeLists.txt  bodies_gathering.cpp  bodies_gathering.h  quadtree_gathering.cpp  quadtree_gathering.h
src/physics/: CMakeLists.txt  body_update.cpp  body_update.h  force.cpp  force.h
src/quadtree/: CMakeLists.txt  node.cpp  node.h  node_json.cpp  quadtree.cpp  quadtree.h
src/simulation/: CMakeLists.txt  barnes_hut_simulation_step.cpp  barnes_hut_simulation_step.h  barnes_hut_simulation_step_json.cpp  deserialization.cpp  deserialization.h  exact_simulation_step.cpp  exact_simulation_step.h  exact_simulation_step_json.cpp  local_barnes_hut_simulator.cpp  local_barnes_hut_simulator.h  local_barnes_hut_simulator_json.cpp  local_exact_simulator.cpp  local_exact_simulator.h  local_exact_simulator_json.cpp  mpi_barnes_hut_simulator.cpp  mpi_barnes_hut_simulator.h  mpi_barnes_hut_simulator_json.cpp  mpi_datatypes.cpp  mpi_datatypes.h  serialization.cpp  serialization.h  simple_barnes_hut_simulator.cpp  simple_barnes_hut_simulator.h  simple_barnes_hut_simulator_json.cpp  simple_exact_simulator.cpp  simple_exact_simulator.h  simple_exact_simulator_json.cpp  simple_simulator.cpp  simple_simulator.h  simulated_body.cpp  simulated_body.h  simulated_body_json.cpp  simulation.cpp  simulation.h  simulation_json.cpp  simulation_step.cpp  simulation_step.h
src/simulation_step/: CMakeLists.txt  barnes_hut_simulation_step.cpp  barnes_hut_simulation_step.h  barnes_hut_simulation_step_json.cpp  simulation_step.cpp  simulation_step.h  simulation_step_json.cpp
tests/: CMakeLists.txt  test_barnes_hut_simulator.cpp  test_body.cpp  test_bounding_box.cpp  test_deserialization.cpp  test_eigen.cpp  test_force.cpp  test_node.cpp  test_quadtree.cpp  test_serialization.cpp  testlib.cpp
tests/body/: CMakeLists.txt  test_bounding_box.cpp
tests/data_transfer/: CMakeLists.txt  body_deserialization_test.cpp  body_serialization_test.cpp  quadtree_deserialization_test.cpp  quadtree_serialization_test.cpp
tests/eigen/: CMakeLists.txt  test_eigen.cpp
tests/mpi-barnes-hut-simulator/: CMakeLists.txt  test_mpi_barnes_hut_simulator.cpp
tests/physics/: CMakeLists.txt  test_force.cpp
tests/quadtree/: CMakeLists.txt  reconstrut_8x8_quadtree_grid.dot  test_quadtree.cpp
tests/utils/: CMakeLists.txt  body-2.txt  body-bad.txt  test_loader.cpp
webgui/: index.html  quadtree.html  simulation.html  simulation.js  style.css
webgui/scripts/: animation.js  common.js  quadtree.js
(+9 files in other folders)
